--- a/pc6_buurt_mapping.ipynb
+++ b/pc6_buurt_mapping.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
