buurt code into abm

--- a/pc6_buurt_mapping.ipynb
+++ b/pc6_buurt_mapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,47 @@
    "source": [
     "pc_buurt.to_csv(\"pc6_to_buurt.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Processed_ams_pc6_buurt_data.csv'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_data = pd.read_csv(\"cleaned_household_data.csv\")\n",
+    "postcode_buurt_map = pd.read_csv(\"pc6_to_buurt.csv\")\n",
+    "\n",
+    "cleaned_data[\"postcode6\"] = cleaned_data[\"postcode6\"].astype(str).str.replace(r\"\\s+\", \"\", regex=True).str.upper()\n",
+    "postcode_buurt_map[\"postcode6\"] = postcode_buurt_map[\"postcode6\"].astype(str).str.replace(r\"\\s+\", \"\", regex=True).str.upper()\n",
+    "\n",
+    "merged = pd.merge(cleaned_data, postcode_buurt_map, on=\"postcode6\", how=\"left\")\n",
+    "\n",
+    "amsterdam_data = merged[merged[\"cbs_code\"].str.startswith(\"BU0363\", na=False)].copy()\n",
+    "amsterdam_data[\"buurt_code\"] = amsterdam_data[\"cbs_code\"].str[-8:]\n",
+    "\n",
+    "output_path = \"Processed_ams_pc6_buurt_data.csv\"\n",
+    "amsterdam_data.to_csv(output_path, index=False)\n",
+    "\n",
+    "output_path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
